fixed timeline spacing

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ img::selection {
 }
 
 #time {
-    right: 1vw;
+    right: 2vw;
     transform: translateY(0.3vh);
     position: fixed;
     z-index: 1;
@@ -31,6 +31,9 @@ img::selection {
     row-gap: 2vw;
     width: 100%; /* Full container width */
     margin-top: 1vw;
+}
+#letterhead {
+    margin-left:0;
 }
 .text-container {
     display: flex;
